[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.79"
env_logger = "0.9"
http = "1.1.0"
log = "0.4.21"
pingora = {version= "0.1.0", features=["lb", "openssl"]}
pingora-cache = "0.1.0"
pingora-core = "0.1.0"
pingora-error = "0.1.0"
pingora-http = "0.1.0"
pingora-limits = "0.1.0"
pingora-load-balancing = "0.1.0"
pingora-proxy = "0.1.0"
pingora-timeout = "0.1.0"
regex = "1"
structopt = "0.3"
